--- a/backend/ts_template/package.json
+++ b/backend/ts_template/package.json
@@ -4,7 +4,9 @@
     "start": "ts-node devdonalds.ts"
   },
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.13.1",
